fix: Resolve virtual thread pinning in GsonUtil and add documentation.